# learnfastapiyt

./: Makefile  class_decorators.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_decorators.py  test_decorators2.py
nginx/: default.conf
nginx/src/: index.html
products/: exceptions.py  managers.py  services.py  views.py
products/src/: dependencies.py  main.py
products/src/core/: permissions.py
products/src/core/user/: exceptions.py
products/src/migrations/versions/: 0001_create_user.py
products/src/tests/integration/: test_users.py
src/: config.py  dependencies.py  main.py
src/api/graphql/: resolvers.py
src/api/graphql/user/: resolvers.py  schemas.py
src/api/rest/product/: views.py
src/api/rest/user/: decorators.py  models.py  views.py
src/core/user/: entities.py  exceptions.py  services.py
src/infrastructure/database/: base.py
src/infrastructure/database/repositories/: user.py
src/infrostructure/database/: base.py  exceptions.py  uow.py
src/infrostructure/database/models/: user.py
src/infrostructure/database/repositories/: user.py
src/migrations/: env.py
src/products/: decorators.py  managers.py  views.py
src/tests/: conftest.py
src/tests/integration/: test_users.py
src/users/: dependencies.py  managers.py  models.py
tasks/: Dockerfile  pyproject.toml
tasks/src/: config.py  dependencies.py  main.py
tasks/src/api/rest/: decorators.py  views.py
tasks/src/core/: entities.py  exceptions.py  permissions.py  services.py
tasks/src/infrastructure/: users_client.py
tasks/src/infrastructure/database/models/: task.py  task_access.py
tasks/src/infrastructure/database/repositories/: task.py  task_access.py
tasks/src/infrastructure/logging_configs/: local.py
tasks/src/migrations/versions/: 0001_create_tasks.py  0002_add_creator_email.py  0003_remove_creator_email.py  0004_create_task_access.py
tasks/src/tests/: conftest.py
tasks/src/tests/integration/: test_tasks.py
users/: decorators.py  dependencies.py  models.py  permissions.py  pyproject.toml  services.py  views.py
users/src/: dependencies.py  main.py
users/src/api/graphql/: decorators.py
users/src/api/rest/: __init__.py  models.py  (+1 more)
users/src/core/: entities.py  services.py
users/src/migrations/: env.py
(+11 files in other folders)
