[project]
name = "learn-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "vladmir0512",email = "vjgamer2001@gmail.com"}
]
license = "MIT"
requires-python = ">3.10,<4.0"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (==0.49.0)",
    "python-jose (==3.5.0)",
    "bcrypt (==5.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "strawberry-graphql[debug-server] (>=0.321.1,<0.322.0)",
    "secretstorage (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
